# nanote

./: Cargo.toml
src/: dot_toml.rs  global.rs  main.rs  page.rs  quick_page.rs  utils.rs
