[package]
name = "nav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.5.4", features = ["cargo"]}
crossterm = "0.27"
color-eyre = "0.6"
toml = "0.8"
serde = "1.0"
serde_derive = "1.0"
ratatui = {version = "0.26.3", features = ["unstable-widget-ref"]}
rustyline = "14.0.0"
anyhow = "1.0"
